<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/food_lists"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/foodListDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:weightSum="2">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/total"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
        />

        <TextView
                android:id="@+id/txtFoodPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Kiadtisak Lowongsa"
                android:layout_weight="1"
                android:gravity="right"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:weightSum="2">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/delivery"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
        />

        <TextView
                android:id="@+id/txtDeliveryPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Kiadtisak Lowongsa"
                android:layout_weight="1"
                android:gravity="right"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:weightSum="2">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/total"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
        />

        <TextView
                android:id="@+id/txtAllPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Kiadtisak Lowongsa"
                android:layout_weight="1"
                android:gravity="right"
        />

    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/calculate_change"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:weightSum="3">

        <EditText
                android:id="@+id/edtCalChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/change_input"
                android:layout_weight="2"
                android:inputType="number"
        />

        <TextView
                android:id="@+id/txtCalChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/thbath"
                android:layout_weight="1"
                android:gravity="right"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:weightSum="2">

        <Button
                android:id="@+id/btnCheckBillOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/btnAcceptOrder"
                android:text="@string/accept_order"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
        />

        <Button
                android:id="@+id/btnCheckBillCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/cancel"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
        />

    </LinearLayout>

</LinearLayout>